# kensho

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release-maven.yml  release-nuget.yml  release-pypi.yml  release-rubygems.yml  release.yml
examples/appium-demo/: package.json  wdio.conf.js
examples/appium-demo/scripts/: seed-results.mjs
examples/appium-demo/tests/: login.spec.js
examples/cucumber-jvm-demo/: .gitignore  README.md  pom.xml
examples/cucumber-ruby-demo/: Gemfile  README.md  cucumber.yml
examples/detox-demo/: .detoxrc.js  package.json
examples/dotnet-demo/: README.md  seed-fixtures.mjs
examples/go-demo/: .gitignore  README.md  go.mod  out.json
examples/jasmine-demo/: README.md  package.json
examples/junit5-demo/: README.md  pom.xml
examples/k6-demo/: README.md  package.json  script.js
examples/newman-demo/: README.md  collection.json  package.json
examples/playwright-demo/: package.json  playwright.config.mjs
examples/pytest-demo/: README.md  conftest.py  pyproject.toml
examples/pytest-demo/fixtures/: session.txt
examples/pytest-demo/tests/: test_demo.py
examples/robot-demo/: .gitignore  README.md
examples/rspec-demo/: .gitignore  .rspec  Gemfile  README.md
examples/testng-demo/: README.md  pom.xml
examples/xcuitest-demo/: package.json
integrations/: README.md
integrations/vscode/: README.md  package.json
(+53 files in other folders)
